# compression

./: .env.example  .gitignore  README.md  composer.json
rust/: Cargo.toml  build.sh
rust/src/: lib.rs
src/: CompressionManager.php  CompressionServiceProvider.php
src/Configuration/: Configuration.php
src/Contracts/: CompressionEngineInterface.php  CompressionManagerInterface.php  ConfigurationInterface.php
src/Engines/: AMPHPEngine.php  PurePHPEngine.php  RustFFIEngine.php
src/Exceptions/: CompressionException.php  ConfigurationException.php  EngineNotAvailableException.php
src/FFI/: RustCompressionFFI.php
src/Middleware/: CompressionMiddleware.php
tests/Integration/: CompressionIntegrationTest.php
tests/Performance/: CompressionPerformanceTest.php
tests/Unit/: CompressionManagerTest.php  ConfigurationTest.php  PurePHPEngineTest.php
